# advent-of-code

2023/: Cargo.toml
2023/.day_template/src/: part1.rs  part2.rs
2023/day_01/src/: part1.rs  part2.rs
2023/day_02/src/: part1.rs  part2.rs
2023/day_03/src/: part1.rs  part2.rs
2023/day_04/: Cargo.toml
2023/day_04/src/: part1.rs  part2.rs
2023/day_05/: Cargo.toml
2023/day_05/src/: part1.rs  part2.rs
