[package]
name = "advent_of_code"
version = "0.9.4"
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
nom = "7.1.3"
itertools = "0.12.0"
glam = "0.24.2"
pathfinding = "4.6.0"
